After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723553 - gdm crashing (assertions in gdbusconnection.c)
gdm crashing (assertions in gdbusconnection.c)
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
: 723738 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-02-03 19:28 UTC by Colin Walters
Modified: 2014-02-13 15:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file-db: don't install match rules on no bus (3.03 KB, patch)
2014-02-11 22:44 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Colin Walters 2014-02-03 19:28:54 UTC
Presently gdm doesn't start, I see various bits hitting assertion failures:

Feb 03 19:27:47 qemux86-64 org.a11y.Bus[613]: GLib-GIO:ERROR:../../gio/gdbusconnection.c:6921:message_bus_get_singleton: code should not be reached
Feb 03 19:27:47 qemux86-64 gnome-session[609]: GLib-GIO:ERROR:../../gio/gdbusconnection.c:6921:message_bus_get_singleton: code should not be reached
Comment 1 Colin Walters 2014-02-11 19:00:51 UTC
Doing:

[daemon]
AutomaticLoginEnable=true
AutomaticLogin=walters

in /etc/gdm/custom.conf gets me to a working UI - so this is something strange with the GDM login shell.
Comment 2 Colin Walters 2014-02-11 19:08:13 UTC
Doing:

[daemon]
AutomaticLoginEnable=true
AutomaticLogin=walters

in /etc/gdm/custom.conf gets me to a working UI - so this is something strange with the GDM login shell.
Comment 3 Colin Walters 2014-02-11 19:34:21 UTC
Ok, it looks like the bisection range starts with:

good 0c65c092f374fdb42522b56a0078020412b2472e

That makes

feb6ddaff33a3e58a20e94264313322534963f98

highly likely to be the first bad commit.
Comment 4 Allison Karlitskaya (desrt) 2014-02-11 20:48:00 UTC
This assertion is coming from dconf -- presumably a bug in the file-db backend that didn't show up until gdm started using it.

I'll look into this.
Comment 5 Allison Karlitskaya (desrt) 2014-02-11 22:44:37 UTC
Created attachment 268860 [details] [review]
file-db: don't install match rules on no bus

file-db databases don't have an associated D-Bus bus type, so don't try
to install match rules for them.
Comment 6 Allison Karlitskaya (desrt) 2014-02-12 18:28:57 UTC
Attachment 268860 [details] pushed as 431d112 - file-db: don't install match rules on no bus
Comment 7 Torsten Scholak 2014-02-12 20:50:42 UTC
*** Bug 723738 has been marked as a duplicate of this bug. ***
Comment 8 Colin Walters 2014-02-12 22:07:02 UTC
Ok, I'm going to repurpose this bug.  Now we have:

Feb 12 21:52:15 qemux86-64 gnome-session[391]: Gjs-Message: JS LOG: GNOME Shell started at Wed Feb 12 2014 21:52:15 GMT+0000 (GMT)
Feb 12 21:52:15 qemux86-64 gnome-session[391]: (gnome-shell:422): Gjs-WARNING **: JS ERROR: Exception in callback for signal: startup-prepared: Gio.DBusError: GDBus.Error:org.freedesktop.DBus.Error.AccessDenied: No session available
Feb 12 21:52:15 qemux86-64 gnome-session[391]: LoginDialog<._init@resource:///org/gnome/shell/gdm/loginDialog.js:375
Feb 12 21:52:15 qemux86-64 gnome-session[391]: wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Feb 12 21:52:15 qemux86-64 gnome-session[391]: _Base.prototype._construct@resource:///org/gnome/gjs/modules/lang.js:110
Feb 12 21:52:15 qemux86-64 gnome-session[391]: Class.prototype._construct/newClass@resource:///org/gnome/gjs/modules/lang.js:204
Feb 12 21:52:15 qemux86-64 gnome-session[391]: ScreenShield<._ensureUnlockDialog@resource:///org/gnome/shell/ui/screenShield.js:972
Feb 12 21:52:15 qemux86-64 gnome-session[391]: wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Feb 12 21:52:15 qemux86-64 gnome-session[391]: ScreenShield<.showDialog@resource:///org/gnome/shell/ui/screenShield.js:918
Feb 12 21:52:15 qemux86-64 gnome-session[391]: wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Feb 12 21:52:15 qemux86-64 gnome-session[391]: _initializeUI/<@resource:///org/gnome/shell/ui/main.js:208
Feb 12 21:52:15 qemux86-64 gnome-session[391]: _emit@resource:///org/gnome/gjs/modules/signals.js:124
Feb 12 21:52:15 qemux86-64 gnome-session[391]: LayoutManager<._prepareStartupAnimation@resource:///org/gnome/shell/ui/layout.js:620
Feb 12 21:52:15 qemux86-64 gnome-session[391]: wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Feb 12 21:52:15 qemux86-64 gnome-session[391]: LayoutManager<._loadBackground/signalId<@resource:///org/gnome/shell/ui/layout.js:565
Feb 12 21:52:15 qemux86-64 gnome-session[391]: _emit@resource:///org/gnome/gjs/modules/signals.js:124
Feb 12 21:52:15 qemux86-64 gnome-session[391]: SystemBackground<._init/<.onFinished<@resource:///org/gnome/shell/ui/background.js:639
Feb 12 21:52:15 qemux86-64 gnome-session[391]: BackgroundCache<._loadImageContent/<@resource:///org/gnome/shell/ui/background.js:197
Comment 9 Allison Karlitskaya (desrt) 2014-02-13 03:51:38 UTC
Do you believe this to be the same bug at all?  I mean -- do you have any reason to suspect that this is dconf-related anymore?
Comment 10 Torsten Scholak 2014-02-13 03:53:03 UTC
The problems I have reported on in bug 723738 have disappeared.
Comment 11 Colin Walters 2014-02-13 12:28:52 UTC
(In reply to comment #9)
> Do you believe this to be the same bug at all?  I mean -- do you have any
> reason to suspect that this is dconf-related anymore?

Nope, let me take this back to gdm.
Comment 13 Allison Karlitskaya (desrt) 2014-02-13 13:45:00 UTC
...or we could have kept the dconf bug as a dconf bug and opened a new bug for the separate issue in gdm...

(but not asking you to change it back again now)
Comment 14 Colin Walters 2014-02-13 15:11:32 UTC
(In reply to comment #13)
> ...or we could have kept the dconf bug as a dconf bug and opened a new bug for
> the separate issue in gdm...

Yeah, sorry, I normally do that, this one just had historical context that is useful.