file-db: don't install match rules on no bus

file-db databases don't have an associated D-Bus bus type, so don't try
to install match rules for them.

https://bugzilla.gnome.org/show_bug.cgi?id=723553